--- a/build.settings
+++ b/build.settings
@@ -20,7 +20,7 @@ settings =
 	{
 		usesPermissions =
 		{
-			"android.permission.INTERNET",
+			"android.permission.INTERNET","android.permission.VIBRATE",
 		},
 	},
 
